--- a/src/App.css
+++ b/src/App.css
@@ -163,11 +163,25 @@ td {
 
 .smiley {
   color: gold;
+  background: black;
+  border-radius: 50%;
+  -webkit-text-stroke: 2px black;
 }
 
 .smiley:hover {
-  opacity: 0.6;
   cursor: pointer;
+  animation: bounce 0.6s ease alternate infinite;
+}
+
+@keyframes bounce {
+  0% {
+    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.7);
+    transform: translateY(0px);
+  }
+  100% {
+    text-shadow: 0 20px 10px rgba(0, 0, 0, 0.1);
+    transform: translateY(-10px);
+  }
 }
 
 .square {
