--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,11 @@
   --color-four: purple;
 
   /* SQUARE STATE */
-  --square-exploded: crimson;
   --square-open: #ccc;
   --square-shut: #eee;
+
+  /* MISC. */
+  --danger: crimson;
 }
 
 /* HELPERS */
@@ -105,6 +107,10 @@ code {
 
 ul {
   margin: 0;
+}
+
+.danger {
+  color: var(--danger);
 }
 
 /* COMPONENT-SPECIFIC */
@@ -211,7 +217,7 @@ td {
 }
 
 .exploded {
-  background: var(--square-exploded);
+  background: var(--danger);
 }
 
 .one-neighbors {
