--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
   --color-four: purple;
 
   /* SQUARE STATE */
-  --square-open: #ccc;
-  --square-shut: #eee;
+  --square-open: #bbb;
+  --square-shut: #ddd;
 
   /* MISC. */
   --danger: crimson;
@@ -208,10 +208,6 @@ td {
   color: #aaa;
 }
 
-.grid {
-  border: 1px solid #ddd;
-}
-
 .counter-label {
   text-transform: uppercase;
   font-weight: bold;
@@ -244,7 +240,7 @@ td {
   width: var(--size-l);
   height: var(--size-l);
   box-sizing: border-box;
-  border: 1px solid #ddd;
+  margin: 1px;
 }
 
 .shut {
@@ -253,9 +249,7 @@ td {
 
 .shut:hover {
   cursor: pointer;
-  border-color: #bbb;
-  outline: 1px solid #bbb;
-  z-index: 10;
+  border: 2px solid var(--square-open);
 }
 
 .open {
