--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,10 @@ h4,
   margin-right: var(--size-xs);
 }
 
+.margin-bottom-s {
+  margin-bottom: var(--size-s);
+}
+
 .margin-bottom-m {
   margin-bottom: var(--size-m);
 }
@@ -137,12 +141,8 @@ table {
   font-size: var(--size-m);
 }
 
-ul {
-  margin: 0;
-}
-
 p {
-  margin-top: 0;
+  margin: 0;
 }
 
 .indented-s {
